Se agrego el nombre

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="pachaqtec">
      
       <h1>Pachaqtec</h1>
-      <h2>Hola, mi nombre es</h2>
+      <h2>Hola, mi nombre es André</h2>
 
     </section>
     <section class="sobre-mi">
