Se agrego alt para imagenes

--- a/index.html
+++ b/index.html
@@ -27,33 +27,33 @@
       <div>
         <div>
           <h3>HTML</h3>
-          <img src="./images/barra1.png" alt="">
-          <img src="./images/barrablanca.png" alt="">
+          <img src="./images/barra1.png" alt="barra-morada">
+          <img src="./images/barrablanca.png" alt="barra-blanca">
         </div>
         <div>
           <h3>Javascript</h3>
-          <img src="./images/barra1.png" alt="">
-          <img src="./images/barrablanca.png" alt="">
+          <img src="./images/barra1.png" alt="barra-morada">
+          <img src="./images/barrablanca.png" alt="barra-blanca">
         </div>
         <div>
           <h3>CSS</h3>
-          <img src="./images/barra1.png" alt="">
-          <img src="./images/barrablanca.png" alt="">
+          <img src="./images/barra1.png" alt="barra-morada">
+          <img src="./images/barrablanca.png" alt="barra-blanca">
         </div>
         <div>
           <h3>Vue</h3>
-          <img src="./images/barra1.png" alt="">
-          <img src="./images/barrablanca.png" alt="">
+          <img src="./images/barra1.png" alt="barra-morada">
+          <img src="./images/barrablanca.png" alt="barra-blanca">
         </div>
         <div>
           <h3>CSS grid</h3>
-          <img src="./images/barra1.png" alt="">
-          <img src="./images/barrablanca.png" alt="">
+          <img src="./images/barra1.png" alt="barra-morada">
+          <img src="./images/barrablanca.png" alt="barra-blanca">
         </div>
         <div>
           <h3>Flexbox</h3>
-          <img src="./images/barra1.png" alt="">
-          <img src="./images/barrablanca.png" alt="">
+          <img src="./images/barra1.png" alt="barra-morada">
+          <img src="./images/barrablanca.png" alt="barra-blanca">
         </div>
 
       </div>
@@ -64,28 +64,28 @@
       <h2>Portafolio</h2>
       <div class="imagenes">
         <figure>
-          <img src="./images/Iport-1.png" alt="">
+          <img src="./images/Iport-1.png" alt="portafolio-1">
         </figure>
         <figure>
-          <img src="./images/Iport-2.png" alt="">
+          <img src="./images/Iport-2.png" alt="portafolio-2">
         </figure>
         <figure>
-          <img src="./images/Iport-3.png" alt="">
+          <img src="./images/Iport-3.png" alt="portafolio-3">
         </figure>
         <figure>
-          <img src="./images/Iport-4.png" alt="">
+          <img src="./images/Iport-4.png" alt="portafolio-4">
         </figure>
         <figure>
-          <img src="./images/Iport-5.png" alt="">
+          <img src="./images/Iport-5.png" alt="portafolio-5">
         </figure>
         <figure>
-          <img src="./images/Iport-6.png" alt="">
+          <img src="./images/Iport-6.png" alt="portafolio-6">
         </figure>
         <figure>
-          <img src="./images/Iport-7.png" alt="">
+          <img src="./images/Iport-7.png" alt="portafolio-7">
         </figure>
         <figure>
-          <img src="./images/Iport-8.png" alt="">
+          <img src="./images/Iport-8.png" alt="portafolio-8">
         </figure>
       </div>
 
@@ -93,16 +93,16 @@
     <section class="clientes">
       <h2>Clientes</h2>
       <ul>
-        <li><img src="./images/Icli-1.png" width="100" alt=""></li>
-        <li><img src="./images/Icli-2.png" width="100" alt=""></li>
-        <li><img src="./images/Icli-3.png" width="100" alt=""></li>
-        <li><img src="./images/Icli-4.png" width="100" alt=""></li>
+        <li><img src="./images/Icli-1.png" width="100" alt="cliente-1"></li>
+        <li><img src="./images/Icli-2.png" width="100" alt="cliente-2"></li>
+        <li><img src="./images/Icli-3.png" width="100" alt="cliente-3"></li>
+        <li><img src="./images/Icli-4.png" width="100" alt="cliente-4"></li>
       </ul>
 
     </section>
     <footer>
       <h2>Contacto</h2>
-      <form>
+      <form action="">
         <input type="text" placeholder="Nombre" required>
         <input type="text" placeholder="Apellido" required> <br> <br>
         <input type="email" placeholder="Email" required>
