Se dejo la estructura html de las barras

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <main>
     <section class="pachaqtec">
-     
+
       <h1>Pachaqtec</h1>
       <h2>Hola, mi nombre es André</h2>
 
@@ -27,33 +27,33 @@
       <div>
         <div>
           <h3>HTML</h3>
-          <img src="./images/barra1.png" alt="barra-morada">
-          <img src="./images/barrablanca.png" alt="barra-blanca">
+          <div></div>
+          <div></div>
         </div>
         <div>
           <h3>Javascript</h3>
-          <img src="./images/barra1.png" alt="barra-morada">
-          <img src="./images/barrablanca.png" alt="barra-blanca">
+          <div></div>
+          <div></div>
         </div>
         <div>
           <h3>CSS</h3>
-          <img src="./images/barra1.png" alt="barra-morada">
-          <img src="./images/barrablanca.png" alt="barra-blanca">
+          <div></div>
+          <div></div>
         </div>
         <div>
           <h3>Vue</h3>
-          <img src="./images/barra1.png" alt="barra-morada">
-          <img src="./images/barrablanca.png" alt="barra-blanca">
+          <div></div>
+          <div></div>
         </div>
         <div>
           <h3>CSS grid</h3>
-          <img src="./images/barra1.png" alt="barra-morada">
-          <img src="./images/barrablanca.png" alt="barra-blanca">
+          <div></div>
+          <div></div>
         </div>
         <div>
           <h3>Flexbox</h3>
-          <img src="./images/barra1.png" alt="barra-morada">
-          <img src="./images/barrablanca.png" alt="barra-blanca">
+          <div></div>
+          <div></div>
         </div>
 
       </div>
@@ -102,7 +102,7 @@
     </section>
     <footer>
       <h2>Contacto</h2>
-      <form action="">
+      <form>
         <input type="text" placeholder="Nombre" required>
         <input type="text" placeholder="Apellido" required> <br> <br>
         <input type="email" placeholder="Email" required>
