--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <input type="text" placeholder="Nombre" required>
         <input type="text" placeholder="Apellido" required> <br> <br>
         <input type="email" placeholder="Email" required>
-        <input type="phone" placeholder="phone" required> <br><br>
+        <input type="tel" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="phone" required> <br><br>
         <textarea name="extra" cols="20" rows="3" placeholder="Description"></textarea> <br>
         <button>Enviar</button>
 
