--- a/index.html
+++ b/index.html
@@ -4,116 +4,45 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portafolio</title>
+  <title>Document</title>
   <link href="./styles/main.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
+  <header>
+    <h1>Animals</h1>
+  </header>
   <main>
-    <section class="pachaqtec">
-
-      <h1>Pachaqtec</h1>
-      <h2>Hola, mi nombre es André</h2>
-
-    </section>
-    <section class="sobre-mi">
-      <h2>Sobre mi</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque sed quaerat incidunt exercitationem repudiandae
-        rem voluptas iste cupiditate iure? Ab ullam itaque laborum reprehenderit sed totam nostrum rerum ea libero.</p>
-      <button>Ver CV</button>
-    </section>
-    <section class="skills">
-      <h2>Mis Skills</h2>
+    <section class="sub-1">
+      <h2>subtitulo</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quis impedit voluptates sed deleniti enim libero
+        odit laudantium ipsum. Ea explicabo dolor error saepe, est commodi nostrum ex incidunt facilis.</p>
       <div>
-        <div>
-          <h3>HTML</h3>
-          <div></div>
-          <div></div>
-        </div>
-        <div>
-          <h3>Javascript</h3>
-          <div></div>
-          <div></div>
-        </div>
-        <div>
-          <h3>CSS</h3>
-          <div></div>
-          <div></div>
-        </div>
-        <div>
-          <h3>Vue</h3>
-          <div></div>
-          <div></div>
-        </div>
-        <div>
-          <h3>CSS grid</h3>
-          <div></div>
-          <div></div>
-        </div>
-        <div>
-          <h3>Flexbox</h3>
-          <div></div>
-          <div></div>
-        </div>
-
-      </div>
-
-
-    </section>
-    <section class="portafolio">
-      <h2>Portafolio</h2>
-      <div class="imagenes">
         <figure>
-          <img src="./images/Iport-1.png" alt="portafolio-1">
+          <img src="./images/animal1.png" alt="Tigre blanco">
         </figure>
         <figure>
-          <img src="./images/Iport-2.png" alt="portafolio-2">
-        </figure>
-        <figure>
-          <img src="./images/Iport-3.png" alt="portafolio-3">
-        </figure>
-        <figure>
-          <img src="./images/Iport-4.png" alt="portafolio-4">
-        </figure>
-        <figure>
-          <img src="./images/Iport-5.png" alt="portafolio-5">
-        </figure>
-        <figure>
-          <img src="./images/Iport-6.png" alt="portafolio-6">
-        </figure>
-        <figure>
-          <img src="./images/Iport-7.png" alt="portafolio-7">
-        </figure>
-        <figure>
-          <img src="./images/Iport-8.png" alt="portafolio-8">
+          <img src="./images/animal2.png" alt="mapache">
         </figure>
       </div>
-
     </section>
-    <section class="clientes">
-      <h2>Clientes</h2>
-      <ul>
-        <li><img src="./images/Icli-1.png" width="100" alt="cliente-1"></li>
-        <li><img src="./images/Icli-2.png" width="100" alt="cliente-2"></li>
-        <li><img src="./images/Icli-3.png" width="100" alt="cliente-3"></li>
-        <li><img src="./images/Icli-4.png" width="100" alt="cliente-4"></li>
-      </ul>
-
+    <section class="sub-2">
+      <h2>Subtitulo</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quis impedit voluptates sed deleniti enim libero
+        odit laudantium ipsum. Ea explicabo dolor error saepe, est commodi nostrum ex incidunt facilis.</p>
+      <div>
+        <figure>
+          <img src="./images/animal1.png" alt="Tigre blanco">
+        </figure>
+        <figure>
+          <img src="./images/animal2.png" alt="mapache">
+        </figure>
+      </div>
     </section>
-    <footer>
-      <h2>Contacto</h2>
-      <form>
-        <input type="text" placeholder="Nombre" required>
-        <input type="text" placeholder="Apellido" required> <br> <br>
-        <input type="email" placeholder="Email" required>
-        <input type="tel" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="phone" required> <br><br>
-        <textarea name="extra" cols="20" rows="3" placeholder="Description"></textarea> <br>
-        <button>Enviar</button>
-
-      </form>
-
-    </footer>
   </main>
+  <footer>
+    <p>Credo por: André</p>
+  </footer>
 
 </body>
 
