--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Animals</title>
   <link href="./styles/main.css" type="text/css" rel="stylesheet" />
 </head>
 
@@ -41,7 +41,7 @@
     </section>
   </main>
   <footer>
-    <p>Credo por: André</p>
+    <p>Creado por: André</p>
   </footer>
 
 </body>
