--- a/form.html
+++ b/form.html
@@ -35,6 +35,7 @@
     </section>
     <section>
       <h2>Formulario</h2>
+      <h3>Para más información llene este formulario</h3>
       <form action="#">
         <input type="text" name="us-name" placeholder="Nombre" required pattern="[A-Za-z]+">
         <input type="text" name="us-lastname" placeholder="Apellido" required pattern="[A-Za-z]+">
