--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 <body>
   <main>
     <section class="pachaqtec">
-     
       <h1>Pachaqtec</h1>
-      <h2>Hola, mi nombre es</h2>
-
+      <h2>Hola, mi nombre es André</h2>
     </section>
     <section class="sobre-mi">
       <h2>Sobre mi</h2>
@@ -27,91 +25,84 @@
       <div>
         <div>
           <h3>HTML</h3>
-          <img src="./images/barra1.png" alt="">
-          <img src="./images/barrablanca.png" alt="">
+          <div></div>
+          <div></div>
         </div>
         <div>
           <h3>Javascript</h3>
-          <img src="./images/barra1.png" alt="">
-          <img src="./images/barrablanca.png" alt="">
+          <div></div>
+          <div></div>
         </div>
         <div>
           <h3>CSS</h3>
-          <img src="./images/barra1.png" alt="">
-          <img src="./images/barrablanca.png" alt="">
+          <div></div>
+          <div></div>
         </div>
         <div>
           <h3>Vue</h3>
-          <img src="./images/barra1.png" alt="">
-          <img src="./images/barrablanca.png" alt="">
+          <div></div>
+          <div></div>
         </div>
         <div>
           <h3>CSS grid</h3>
-          <img src="./images/barra1.png" alt="">
-          <img src="./images/barrablanca.png" alt="">
+          <div></div>
+          <div></div>
         </div>
         <div>
           <h3>Flexbox</h3>
-          <img src="./images/barra1.png" alt="">
-          <img src="./images/barrablanca.png" alt="">
+          <div></div>
+          <div></div>
         </div>
-
       </div>
-
-
     </section>
     <section class="portafolio">
       <h2>Portafolio</h2>
       <div class="imagenes">
         <figure>
-          <img src="./images/Iport-1.png" alt="">
+          <img src="./images/Iport-1.png" alt="portafolio-1">
         </figure>
         <figure>
-          <img src="./images/Iport-2.png" alt="">
+          <img src="./images/Iport-2.png" alt="portafolio-2">
         </figure>
         <figure>
-          <img src="./images/Iport-3.png" alt="">
+          <img src="./images/Iport-3.png" alt="portafolio-3">
         </figure>
         <figure>
-          <img src="./images/Iport-4.png" alt="">
+          <img src="./images/Iport-4.png" alt="portafolio-4">
         </figure>
         <figure>
-          <img src="./images/Iport-5.png" alt="">
+          <img src="./images/Iport-5.png" alt="portafolio-5">
         </figure>
         <figure>
-          <img src="./images/Iport-6.png" alt="">
+          <img src="./images/Iport-6.png" alt="portafolio-6">
         </figure>
         <figure>
-          <img src="./images/Iport-7.png" alt="">
+          <img src="./images/Iport-7.png" alt="portafolio-7">
         </figure>
         <figure>
-          <img src="./images/Iport-8.png" alt="">
+          <img src="./images/Iport-8.png" alt="portafolio-8">
         </figure>
       </div>
-
     </section>
     <section class="clientes">
       <h2>Clientes</h2>
       <ul>
-        <li><img src="./images/Icli-1.png" width="100" alt=""></li>
-        <li><img src="./images/Icli-2.png" width="100" alt=""></li>
-        <li><img src="./images/Icli-3.png" width="100" alt=""></li>
-        <li><img src="./images/Icli-4.png" width="100" alt=""></li>
+        <li><img src="./images/Icli-1.png" width="100" alt="cliente-1"></li>
+        <li><img src="./images/Icli-2.png" width="100" alt="cliente-2"></li>
+        <li><img src="./images/Icli-3.png" width="100" alt="cliente-3"></li>
+        <li><img src="./images/Icli-4.png" width="100" alt="cliente-4"></li>
       </ul>
-
     </section>
     <footer>
       <h2>Contacto</h2>
-      <form>
-        <input type="text" placeholder="Nombre" required>
-        <input type="text" placeholder="Apellido" required> <br> <br>
-        <input type="email" placeholder="Email" required>
-        <input type="phone" placeholder="phone" required> <br><br>
-        <textarea name="extra" cols="20" rows="3" placeholder="Description"></textarea> <br>
+      <form action="#">
+        <input type="text" name="us-name" placeholder="Nombre" required pattern="[A-Za-Z]+">
+        <input type="text" name="us-lastname" placeholder="Apellido" required pattern="[A-Za-Z]+"><br><br>
+        <input type="email" name="us-email" placeholder="Email" required>
+        <input type="tel" name="us-phone" placeholder="phone" required pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"><br><br>
+        <textarea name="us-comments" cols="20" rows="3" placeholder="Description" required pattern="[A-Za-Z]+"></textarea><br>
         <button>Enviar</button>
-
       </form>
-
     </footer>
   </main>
 
