--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
     <footer>
       <h2>Contacto</h2>
       <form action="#">
-        <input type="text" name="us-name" placeholder="Nombre" required pattern="[A-Za-Z]+">
-        <input type="text" name="us-lastname" placeholder="Apellido" required pattern="[A-Za-Z]+"><br><br>
+        <input type="text" name="us-name" placeholder="Nombre" required pattern="[A-Za-z]+">
+        <input type="text" name="us-lastname" placeholder="Apellido" required pattern="[A-Za-z]+"><br><br>
         <input type="email" name="us-email" placeholder="Email" required>
-        <input type="tel" name="us-phone" placeholder="phone" required pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"><br><br>
-        <textarea name="us-comments" cols="20" rows="3" placeholder="Description" required pattern="[A-Za-Z]+"></textarea><br>
+        <input type="tel" name="us-phone" placeholder="phone" required pattern="\d{9}"><br><br>
+        <textarea name="us-comments" cols="20" rows="3" placeholder="Description" required pattern="[A-Za-z]+"></textarea><br>
         <button>Enviar</button>
       </form>
     </footer>
