Se realizo mejoras en el estilo de la página

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portafolio</title>
-  <link href="./styles/main.css" type="text/css" rel="stylesheet" />
+  <link href="./styles/reset.css" rel="stylesheet"/>
+  <link href="./styles/main.css" type="text/css" rel="stylesheet"/>
 </head>
 
 <body>
   <main>
-    <section class="pachaqtec">
+    <section class="banner">
       <h1>Pachaqtec</h1>
       <h2>Hola, mi nombre es André</h2>
     </section>
@@ -87,10 +88,10 @@
     <section class="clientes">
       <h2>Clientes</h2>
       <ul>
-        <li><img src="./images/Icli-1.png" width="100" alt="cliente-1"></li>
-        <li><img src="./images/Icli-2.png" width="100" alt="cliente-2"></li>
-        <li><img src="./images/Icli-3.png" width="100" alt="cliente-3"></li>
-        <li><img src="./images/Icli-4.png" width="100" alt="cliente-4"></li>
+        <li><img src="./images/Icli-1.png" width="150" alt="cliente-1"></li>
+        <li><img src="./images/Icli-2.png" width="150" alt="cliente-2"></li>
+        <li><img src="./images/Icli-1.png" width="150" alt="cliente-3"></li>
+        <li><img src="./images/Icli-3.png" width="150" alt="cliente-4"></li>
       </ul>
     </section>
     <footer>
@@ -100,7 +101,7 @@
         <input type="text" name="us-lastname" placeholder="Apellido" required pattern="[A-Za-z]+"><br><br>
         <input type="email" name="us-email" placeholder="Email" required>
         <input type="tel" name="us-phone" placeholder="phone" required pattern="\d{9}"><br><br>
-        <textarea name="us-comments" cols="20" rows="3" placeholder="Description" required pattern="[A-Za-z]+"></textarea><br>
+        <textarea name="us-comments" cols="30" rows="5" placeholder="Description" required pattern="[A-Za-z]+"></textarea><br>
         <button>Enviar</button>
       </form>
     </footer>
