Estilos y colores de css

--- a/index.html
+++ b/index.html
@@ -4,109 +4,47 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portafolio</title>
-  <link href="./styles/reset.css" rel="stylesheet"/>
-  <link href="./styles/main.css" type="text/css" rel="stylesheet"/>
+  <title>Brazil</title>
+  <link href="./styles/main.css" rel="stylesheet"/>
 </head>
 
 <body>
   <main>
-    <section class="banner">
-      <h1>Pachaqtec</h1>
-      <h2>Hola, mi nombre es André</h2>
+    <h1>Brazil</h1>
+    <section class="history">
+      <h2>History</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime earum porro reprehenderit aliquam distinctio,
+        aliquid rerum adipisci, a quas sequi magni voluptas itaque possimus? Nesciunt beatae non exercitationem!
+        Temporibus, sit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil iste ab voluptas laboriosam,
+        quas voluptatem officia explicabo placeat nesciunt dignissimos iusto libero corporis ipsam harum blanditiis
+        aspernatur recusandae deserunt perspiciatis.</p>
     </section>
-    <section class="sobre-mi">
-      <h2>Sobre mi</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque sed quaerat incidunt exercitationem repudiandae
-        rem voluptas iste cupiditate iure? Ab ullam itaque laborum reprehenderit sed totam nostrum rerum ea libero.</p>
-      <button>Ver CV</button>
+    <section class="geography">
+      <h2>Geography</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem beatae sint nisi tempore minima earum laboriosam
+        enim porro nostrum vitae deserunt velit praesentium, expedita eaque delectus libero cupiditate, incidunt
+        eveniet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum dolore aut illo sed libero. Labore, at
+        nisi alias dolor nobis, consectetur ducimus id eius perferendis temporibus pariatur quia, officiis unde!</p>
     </section>
-    <section class="skills">
-      <h2>Mis Skills</h2>
-      <div>
-        <div>
-          <h3>HTML</h3>
-          <div></div>
-          <div></div>
-        </div>
-        <div>
-          <h3>Javascript</h3>
-          <div></div>
-          <div></div>
-        </div>
-        <div>
-          <h3>CSS</h3>
-          <div></div>
-          <div></div>
-        </div>
-        <div>
-          <h3>Vue</h3>
-          <div></div>
-          <div></div>
-        </div>
-        <div>
-          <h3>CSS grid</h3>
-          <div></div>
-          <div></div>
-        </div>
-        <div>
-          <h3>Flexbox</h3>
-          <div></div>
-          <div></div>
-        </div>
-      </div>
+    <section class="economy">
+      <h2>Economy</h2>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore illo suscipit ex vel doloremque numquam!
+        Minus rem, voluptate ut eius inventore qui soluta cumque voluptatum dolore, id, molestiae optio sequi! Lorem
+        ipsum dolor sit amet consectetur adipisicing elit. Voluptatum rem minus, et modi iste deserunt laborum, nam ab
+        pariatur quibusdam praesentium autem vero suscipit eligendi? Illum architecto neque beatae esse.</p>
     </section>
-    <section class="portafolio">
-      <h2>Portafolio</h2>
-      <div class="imagenes">
-        <figure>
-          <img src="./images/Iport-1.png" alt="portafolio-1">
-        </figure>
-        <figure>
-          <img src="./images/Iport-2.png" alt="portafolio-2">
-        </figure>
-        <figure>
-          <img src="./images/Iport-3.png" alt="portafolio-3">
-        </figure>
-        <figure>
-          <img src="./images/Iport-4.png" alt="portafolio-4">
-        </figure>
-        <figure>
-          <img src="./images/Iport-5.png" alt="portafolio-5">
-        </figure>
-        <figure>
-          <img src="./images/Iport-6.png" alt="portafolio-6">
-        </figure>
-        <figure>
-          <img src="./images/Iport-7.png" alt="portafolio-7">
-        </figure>
-        <figure>
-          <img src="./images/Iport-8.png" alt="portafolio-8">
-        </figure>
-      </div>
+    <section class="culture">
+      <h2>Culture</h2>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos iusto necessitatibus accusantium non, maiores
+        nisi asperiores nesciunt deleniti quod tenetur explicabo quidem repudiandae veritatis odit incidunt id similique
+        labore deserunt Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem ex sed placeat esse impedit
+        necessitatibus atque aspernatur adipisci, quidem inventore, veritatis doloribus facere saepe cum quam, excepturi
+        temporibus distinctio nesciunt?</p>
     </section>
-    <section class="clientes">
-      <h2>Clientes</h2>
-      <ul>
-        <li><img src="./images/Icli-1.png" width="150" alt="cliente-1"></li>
-        <li><img src="./images/Icli-2.png" width="150" alt="cliente-2"></li>
-        <li><img src="./images/Icli-1.png" width="150" alt="cliente-3"></li>
-        <li><img src="./images/Icli-3.png" width="150" alt="cliente-4"></li>
-      </ul>
-    </section>
-    <footer>
-      <h2>Contacto</h2>
-      <form action="#">
-        <input type="text" name="us-name" placeholder="Nombre" required pattern="[A-Za-z]+">
-        <input type="text" name="us-lastname" placeholder="Apellido" required pattern="[A-Za-z]+"><br><br>
-        <input type="email" name="us-email" placeholder="Email" required>
-        <input type="tel" name="us-phone" placeholder="phone" required pattern="\d{9}"><br><br>
-        <textarea name="us-comments" cols="30" rows="5" placeholder="Description" required pattern="[A-Za-z]+"></textarea><br>
-        <button>Enviar</button>
-      </form>
-    </footer>
   </main>
-
+  <footer>
+    <p>&copy;Todos los derechos reservados</p>
+  </footer>
 </body>
 
 </html>
