--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portafolio</title>
-  <link href="./styles/reset.css" rel="stylesheet"/>
-  <link href="./styles/main.css" type="text/css" rel="stylesheet"/>
+  <link href="./styles/reset.css" rel="stylesheet" />
+  <link href="./styles/main.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
   <main>
     <section class="banner">
       <h1>Pachaqtec</h1>
-      <h2>Hola, mi nombre es André</h2>
+      <h2 class="banner-box">Hola, mi nombre es André</h2>
     </section>
     <section class="sobre-mi">
       <h2>Sobre mi</h2>
@@ -24,35 +24,47 @@
     <section class="skills">
       <h2>Mis Skills</h2>
       <div>
-        <div>
-          <h3>HTML</h3>
-          <div></div>
-          <div></div>
+        <div class="grid">
+          <div>
+            <h3>HTML</h3>
+            <div class="bar">
+              <div class="blue-bar"></div>
+            </div>
+          </div>
+          <div>
+            <h3>CSS</h3>
+            <div class="bar">
+              <div class="blue-bar"></div>
+            </div>
+          </div>
         </div>
-        <div>
-          <h3>Javascript</h3>
-          <div></div>
-          <div></div>
+        <div class="grid">
+          <div>
+            <h3>Javascript</h3>
+            <div class="bar">
+              <div class="blue-bar"></div>
+            </div>
+          </div>
+          <div>
+            <h3>Vue</h3>
+            <div class="bar">
+              <div class="blue-bar"></div>
+            </div>
+          </div>
         </div>
-        <div>
-          <h3>CSS</h3>
-          <div></div>
-          <div></div>
-        </div>
-        <div>
-          <h3>Vue</h3>
-          <div></div>
-          <div></div>
-        </div>
-        <div>
-          <h3>CSS grid</h3>
-          <div></div>
-          <div></div>
-        </div>
-        <div>
-          <h3>Flexbox</h3>
-          <div></div>
-          <div></div>
+        <div class="grid">
+          <div>
+            <h3>Flexbox</h3>
+            <div class="bar">
+              <div class="blue-bar"></div>
+            </div>
+          </div>
+          <div>
+            <h3>CSS grid</h3>
+            <div class="bar">
+              <div class="blue-bar"></div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -88,10 +100,10 @@
     <section class="clientes">
       <h2>Clientes</h2>
       <ul>
-        <li><img src="./images/Icli-1.png" width="150" alt="cliente-1"></li>
-        <li><img src="./images/Icli-2.png" width="150" alt="cliente-2"></li>
-        <li><img src="./images/Icli-1.png" width="150" alt="cliente-3"></li>
-        <li><img src="./images/Icli-3.png" width="150" alt="cliente-4"></li>
+        <li><img src="./images/Icli-1.png" alt="cliente-1"></li>
+        <li><img src="./images/Icli-2.png" alt="cliente-2"></li>
+        <li><img src="./images/Icli-1.png" alt="cliente-3"></li>
+        <li><img src="./images/Icli-3.png" alt="cliente-4"></li>
       </ul>
     </section>
     <footer>
@@ -101,7 +113,8 @@
         <input type="text" name="us-lastname" placeholder="Apellido" required pattern="[A-Za-z]+"><br><br>
         <input type="email" name="us-email" placeholder="Email" required>
         <input type="tel" name="us-phone" placeholder="phone" required pattern="\d{9}"><br><br>
-        <textarea name="us-comments" cols="30" rows="5" placeholder="Description" required pattern="[A-Za-z]+"></textarea><br>
+        <textarea name="us-comments" cols="30" rows="5" placeholder="Description" required
+          pattern="[A-Za-z]+"></textarea><br>
         <button>Enviar</button>
       </form>
     </footer>
