Se mejoro el nombre de clases y etiquetas html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1>Pachaqtec</h1>
       <h2 class="banner-box">Hola, mi nombre es André</h2>
     </section>
-    <section class="sobre-mi">
+    <section class="about-me">
       <h2>Sobre mi</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque sed quaerat incidunt exercitationem repudiandae
         rem voluptas iste cupiditate iure? Ab ullam itaque laborum reprehenderit sed totam nostrum rerum ea libero.</p>
@@ -68,9 +68,9 @@
         </div>
       </div>
     </section>
-    <section class="portafolio">
+    <section class="portfolio">
       <h2>Portafolio</h2>
-      <div class="imagenes">
+      <div class="images">
         <figure>
           <img src="./images/Iport-1.png" alt="portafolio-1">
         </figure>
@@ -97,7 +97,7 @@
         </figure>
       </div>
     </section>
-    <section class="clientes">
+    <section class="clients">
       <h2>Clientes</h2>
       <ul>
         <li><img src="./images/Icli-1.png" alt="cliente-1"></li>
@@ -106,7 +106,7 @@
         <li><img src="./images/Icli-3.png" alt="cliente-4"></li>
       </ul>
     </section>
-    <footer>
+    <section class="contacts">
       <h2>Contacto</h2>
       <form action="#">
         <input type="text" name="us-name" placeholder="Nombre" required pattern="[A-Za-z]+">
@@ -117,7 +117,7 @@
           pattern="[A-Za-z]+"></textarea><br>
         <button>Enviar</button>
       </form>
-    </footer>
+    </section>
   </main>
 
 </body>
