Se mejoró el código y el formato del proyecto

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
     <section class="about-me">
       <h2>Sobre mi</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque sed quaerat incidunt exercitationem repudiandae
-        rem voluptas iste cupiditate iure? Ab ullam itaque laborum reprehenderit sed totam nostrum rerum ea libero.</p>
+        rem voluptas iste cupiditate iure? Ab ullam itaque laborum reprehenderit sed totam nostrum rerum ea libero Lorem
+        ipsum, dolor sit amet consectetur adipisicing elit. Laudantium odit et veritatis numquam assumenda voluptatem
+        ipsa alias! Natus voluptatem possimus harum! Maxime quod eligendi iusto magnam optio, consequuntur nulla
+        sapiente Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde dolores temporibus esse ratione sint
+        earum deserunt repellendus delectus. Vel quia exercitationem eveniet ipsam adipisci facere, nesciunt eaque
+        molestiae unde iste.</p>
       <button>Ver CV</button>
     </section>
     <section class="skills">
